- fix voor deployment crash - comment voor gebruik juiste api BAG

--- a/gb_api/gb_api.csproj
+++ b/gb_api/gb_api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c58b49c9-1733-42e3-bdb5-bd1b5f11d2cb</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
