namen veranderd test van bag api in het grote project

--- a/gb_api/gb_api.csproj
+++ b/gb_api/gb_api.csproj
@@ -22,4 +22,8 @@
     <Folder Include="DataSet\Presentation\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BagAPILib\BagAPILib.csproj" />
+  </ItemGroup>
+
 </Project>
