--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Styker
+      run: dotnet tool install -g dotnet-stryker
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet stryker --no-build --verbosity normal
