--- a/stryker-config.json
+++ b/stryker-config.json
@@ -3,7 +3,8 @@
   {
     "test-projects":["./gb_apiTests/gb_apiTests.csproj"],
     "mutation-level": "Standard",
-    "thresholds": { "high": 70, "low": 60, "break": 0 }
+    "thresholds": { "high": 70, "low": 60, "break": 0 },
+    "dashboard-url": "https://dashboard.stryker-mutator.io/repos/GezamelijkeBrandweer"
     
   }
 }
