--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Stryker
       run: dotnet tool install -g dotnet-stryker
     - name: Test
-      run: dotnet-stryker --reporter "markdown"
+      run: dotnet-stryker --reporter "cleartexttree"
