- Refractor van de files - verschillende direcotries renamed - Locatie wordt nu ook opgeslagen wanneer er een nieuw incident word aangemaakt

--- a/gb_api/gb_api.csproj
+++ b/gb_api/gb_api.csproj
@@ -20,6 +20,7 @@
     <Folder Include="DataSet\Application\" />
     <Folder Include="DataSet\Data\" />
     <Folder Include="DataSet\Presentation\" />
+    <Folder Include="Incident\Data" />
   </ItemGroup>
 
   <ItemGroup>
